--- a/style.css
+++ b/style.css
@@ -3,56 +3,61 @@
     padding: 0;
     margin: 0;
 }
-
 html, body {
     width: 100vw;
     height: 100vh;
 }
 main {
     width: 100vw;
-    height: 100vh;
+    height: auto;
+    display: grid;
+    text-align: center;
 }
-.search-card {
-    width: 50vw;
-    height: 50vh;
+.search-bar {
+    width: auto;
+    height: auto;
     position: relative;
-    left: 35%;
-    top: 10%;
-    
+}
+.blank {
+    width: 100vw;
+    height: 40vh;
+}
+.footer {
+    width: 100vw;
+    height: auto;
 }
 .card-deck {
     position: relative;
     width: 100vw;
-    height: auto;
+    height: 50vh;
     display: flex;
 }
 .card {
-    width: 14vw;
+    width: 50vw;
     height: auto;
 }
 .card-img-top {
-    width: 14vw;
+    width: 10vw;
     height: auto;
 }
-
 .card-body {
-    width: 14vw;
+    width: 50vw;
     height: auto;
 }
 .card-title {
-    font-size: .8rem;
-    
+    font-size: .8rem; 
 }
 .card-text {
  font-size: .8rem;
 }
-.card-footer {
-    width: 14vw;
-    height: 8vh;
-}
 
+.card-footer {
+    width: 100vw;
+    height: 50vh;
+}
 .inputs {
     position: relative;
     padding: 6px;
     text-align: center;
 }  
+
